Fixed navbar layout to prevent double vertical scrollbar bug

--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -4,76 +4,59 @@
     font-family: var(--font-inter);
     font-weight: 400;
     background-color: rgb(42, 42, 42);
-    padding-inline: 4rem;
+    padding: 0 4rem;
     min-height: 4rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.nav-items {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-grow: 1;
+}
+
+.logo {
+    height: 2rem;
 }
 
 .nav-links {
     list-style-type: none;
     display: flex;
-    justify-content: center;
     align-items: center;
-    font-size: 1rem;
+    gap: 1rem;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-link {
-    height: 100%;
-    padding-block: 1.5rem;
-    min-width: 5rem;
-    padding-inline: 0.5rem;
     text-align: center;
+    padding: 1rem;
+    transition: background 0.3s ease;
 }
 
-.nav-link:hover{
+.nav-link:hover {
     background: #FFD700;
     color: black;
 }
-.nav-items {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-}
-
-.logo { 
-    position: absolute;
-    left: 4rem;
-    height: 2rem;
-    top: 1rem;
-
-}
 
 .github-buttons {
-    position: absolute;
-    right: 4rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
-.menu-button { 
+.menu-button {
     display: none;
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
-}
-
-@media screen and (max-width: 992px) {
-    .nav-links {
-        font-size: 0.75em;
-    }
-    .logo {
-        left: 1rem;
-    }
-    .github-buttons {
-        right: 1rem;
-    }
 }
 
 @media screen and (max-width: 768px) {
     .github-buttons {
         display: none;
-    }   
+    }
+    
     .nav-links {
         display: none;
     }
